# mmseg-rs

./: Cargo.toml  README.md
.github/workflows/: CI.yml
src/: lib.rs  words.dic
tests/: test_mmseg.rs
