[package]
name = "mmseg"
version = "0.1.1"
authors = ["messense <messense@icloud.com>"]
description = "Chinese word segmenation algorithm MMSEG in Rust"
keywords = ["nlp", "chinese", "segmenation"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/messense/mmseg-rs"

[dependencies]
arrayvec = "0.5"

[features]
default = ["embed-dict"]
embed-dict = []
