[package]
name = "mmseg"
version = "0.2.0"
authors = ["messense <messense@icloud.com>"]
description = "Chinese word segmenation algorithm MMSEG in Rust"
edition = "2018"
keywords = ["nlp", "chinese", "segmenation"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/messense/mmseg-rs"

[dependencies]
arrayvec = "0.5"

[features]
default = ["embed-dict"]
embed-dict = []
